# Verifiable-Multi-Agent-Multi-Task-Assignment

./: Cargo.toml  README.md
circuits/: Skate.circom  anemoi_16_to_1_Baby_Jubjub.circom  anemoi_2_to_1_Baby_Jubjub.circom  anemoi_4_to_1_Baby_Jubjub.circom  anemoi_Baby_Jubjub_16_to_1_constants.circom  anemoi_Baby_Jubjub_2_to_1_constants.circom  anemoi_Baby_Jubjub_4_to_1_constants.circom  hashes.circom  main.circom
src/: Skate.rs  anemoi_2_to_1.rs  anemoi_4_to_1.rs  hashes.rs  lib.rs
src/client/: config.toml  skate_3_3.r1cs  skate_3_3.wasm  skate_3_3.zkey  skate_6_3.r1cs  skate_6_3.wasm
src/server/: config.toml  config2.toml  config3.toml  verification_key_3_3.json  verification_key_6_3.json
